@@ -1,3 +1,5 @@
+Fixed bug #797: yaz_marc_write_xml does not honor character conversion.
+
 Added timings utility (yaz/timing.h)
 
 --- 2.1.44 2007/01/03
